# Console-Chess

./: CMakeLists.txt  main.cpp
include/: Board.h  ChessGame.h  FEN.h  Piece.h  Screen.h
include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
src/: Board.cpp  Board.h  ChessGame.cpp  ChessGame.h  FEN.cpp  FEN.h  Piece.cpp  Screen.cpp  Screen.h
src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
tests/: TestBoard.cpp  TestChessGame.cpp  TestFEN.cpp  TestScreen.cpp
tests/Prefixes/: BoardPrefix.cpp  BoardPrefix.h
tests/TestPieces/: BishopTest.cpp  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  TestQueen.cpp  TestRook.cpp
